...
        android:text="Voting Dashboard"
        android:textSize="60dp"
        android:textStyle="bold"
        android:textColor="@color/gold"
        android:fontFamily="serif"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/logoutButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="18dp"/>

    <EditText
        android:id="@+id/newTopicEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Enter new topic..."
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
...
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"/>

    <Button
        android:id="@+id/addTopicButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Add Topic"
        android:textStyle="bold"
        android:onClick="addNewTopic"
        android:backgroundTint="#32C8BB"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/newTopicEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <ListView
        android:id="@+id/topicsListView"
        android:layout_width="392dp"
        android:layout_height="320dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
...
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Logout"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:onClick="logout"
        android:backgroundTint="#D3D3D3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/profileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Profile"
        android:onClick="displayProfile"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:backgroundTint="#D3D3D3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
