...
        android:textColor="@color/gold"
        android:fontFamily="serif"
        android:textAppearance="?attr/textAppearanceListItem"
        android:layout_marginBottom="18dp"/>

    <ListView
        android:id="@+id/choicesListView"
        android:layout_width="wrap_content"
        android:layout_height="286dp"
        android:layout_weight="1"
        android:background="@color/material_dynamic_primary80"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp" />

    <EditText
        android:id="@+id/newChoiceEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter new choice description"
        android:textColorHint="@color/white"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/addChoiceButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#32C8BB"
        android:textStyle="bold"
        android:text="Add Choice"/>

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:onClick="displayDashboard"
        android:backgroundTint="#32C8BB"
        android:textStyle="bold"
        android:text="Back" />


</LinearLayout>
</ScrollView>

