...
        android:textStyle="bold"
        android:textColor="@color/gold"
        android:fontFamily="serif"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/backToProfileButton" />

    <!-- Change Password Text -->
    <TextView
        android:id="@+id/changePasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Change Password"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView" />

    <!-- Current Password EditText -->
    <EditText
        android:id="@+id/currentPasswordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Enter Current Password"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
...
        android:drawableLeft="@drawable/baseline_password_24"
        android:drawablePadding="8dp"
        />

    <!-- New Password EditText -->
    <EditText
        android:id="@+id/newPasswordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Enter New Password"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
...
        android:fontFamily="sans-serif-condensed-light"
        android:drawableLeft="@drawable/baseline_password_24"
        android:drawablePadding="8dp"/>

    <!-- Submit Button -->
    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Change Password"
        android:textColor="@color/white"
        android:backgroundTint="#32C8BB"
...

    <Button
        android:id="@+id/backToProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Back to Profile"
        android:textColor="@color/black"
        android:backgroundTint="#D3D3D3"
        android:textStyle="bold"
        android:onClick="backToProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
...
