...
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="10dp"/>

    <EditText
        android:id="@+id/text_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Enter username here"
        android:inputType="text"
...
        app:layout_constraintTop_toBottomOf="@+id/text_username"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"/>

    <EditText
        android:id="@+id/text_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Enter password here"
        android:inputType="textPassword"
...
        android:text="Don't have an account?"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/loginTextView"
        android:layout_marginStart="40dp" />

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:textSize="19dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/dpurple"
        android:onClick="displaySignUp"
        app:layout_constraintTop_toTopOf="@+id/txtlogs"
...
